--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-loader": "8.0.6",
     "babel-plugin-named-asset-import": "^0.3.3",
     "babel-preset-react-app": "^9.0.1",
+    "body-parser": "^1.19.0",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "css-element-queries": "^1.2.1",
@@ -27,6 +28,7 @@
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.14.3",
     "eslint-plugin-react-hooks": "^1.6.1",
+    "express": "^4.17.1",
     "file-loader": "3.0.1",
     "fs-extra": "7.0.1",
     "html-webpack-plugin": "4.0.0-beta.5",
@@ -39,6 +41,8 @@
     "lodash": "^4.17.15",
     "mini-css-extract-plugin": "0.5.0",
     "node-sass": "^4.12.0",
+    "nodemailer": "^6.3.0",
+    "nodemon": "^1.19.3",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -69,6 +73,7 @@
     "workbox-webpack-plugin": "4.3.1"
   },
   "scripts": {
+    "server:dev": "nodemon api/index.js",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
