Added production script command for api service

--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "workbox-webpack-plugin": "4.3.1"
   },
   "scripts": {
+    "server:prod": "node api/index.js",
     "server:dev": "nodemon api/index.js",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
